--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </a>
 
         <a class="card" href="#" target="_blank" rel="noreferrer">
-          <h2>Nexus Calendar</h2>
+          <h2>nexus calendar</h2>
           <p>Hybrid physical-digital calendar with Firebase and Javascript + UI.</p>
         </a>
 
