--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <a class="card" href="#" target="_blank" rel="noreferrer">
           <h2>nexus calendar</h2>
           <p>Hybrid physical-digital calendar with Firebase and Javascript + UI.</p>
+        
+        </a>
+
+        <a class="tile nexus" href="#" aria-label="Nexus Calendar project">
+          <span class="nexus__logo">nexus</span>
         </a>
 
         <a class="card" href="#" target="_blank" rel="noreferrer">
