--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
       <p>Creative developer. </p>
 
       <section class="grid">
-        <a class="card" href="#" target="_blank" rel="noreferrer">
-          <h2>VTP Web Refresh ( for mocks will replace later)</h2> 
-          <p>Brand-inspired concept with clean layout and microinteractions.</p>
+        <a class="tile dead-silence" href="#" aria-label="Dead Silence project">
+        <img class="tile__img" src="./assets/svg/deadsilence.svg" alt="Dead Silence" />
         </a>
 
         <a class="card" href="#" target="_blank" rel="noreferrer">
