--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<doctype html>
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
@@ -8,9 +8,22 @@
   </head>
   <body>
     <main class="wrap">
-      <h1>Nicholas Wilcox</h1>
-      <p>Creative developer. </p>
+      <section class="hero">
+        <div class="hero-left">
+          <h1 class="name">Nicholas Wilcox</h1>
 
+          <p class="tagline">
+            Design-minded developer. I build clean, brand-consistent web experiences with strong
+            typography, layout, and micro-interactions.
+          </p>
+
+          <a class="cta" href="#projects">Explore Projects</a>
+        </div>
+        <div class="hero-right">
+          <img class="me-photo" src="./assets/profilepic.png" alt="Photo of the immaculate Nicholas Wilcox" />
+        </div>
+      </section>
+      
       <section class="grid">
         <a class="tile dead-silence" href="#" aria-label="Dead Silence project">
         <img class="tile__img" src="./assets/svg/deadsilence.svg" alt="Dead Silence" />
@@ -33,7 +46,7 @@
       </section>
 
       <footer>
-        <a href="nicholaswilcox03@gmail.com">Email</a>
+        <a href="mailto:nicholaswilcox03@gmail.com">Email</a>
         <span>·</span>
         <a href="https://github.com/nicwilcox/portfolio" target="_blank" rel="noreferrer">GitHub</a>
       </footer>
