--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a class="cta" href="#projects">Explore Projects</a>
         </div>
         <div class="hero-right">
-          <img class="me-photo" src="./assets/profilepic.png" alt="Photo of the immaculate Nicholas Wilcox" />
+          <img class="me-photo" src="./assets/img/profilepic.png" alt="Photo of the immaculate Nicholas Wilcox" />
         </div>
       </section>
       
