--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </a>
 
         <a class="tile iowawarm" href="#" aria-label="Iowa City Warm Project">
-          <img class="tile__img iowawarm__img" src="./assets/svg/iowacity-warm.svg" alt="Iowa City Warm Project" />
+          <img class="tile__img iowawarm__img" src="./assets/svg/icwp.svg" alt="Iowa City Warm Project" />
         </a>
 
         <a class="card" href="#" target="_blank" rel="noreferrer">
