--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <img class="tile__img" src="./assets/svg/deadsilence.svg" alt="Dead Silence" />
         </a>
         
-        <a class="tile shift" href="#" aria-label="Indoor Cat Tracker project">
+        <a class="tile shiftct" href="#" aria-label="Indoor Cat Tracker project">
           <img class="tile__img" src="./assets/svg/tracker.svg" alt="Indoor Cat Tracker" />
         </a>
 
