--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       
       <section class="grid">
 
-        <a class="tile shift" href="#" aria-label="NBA project">
+        <a class="tile shift" href="./nba.html" aria-label="NBA project">
           <img class="tile__img" src="./assets/svg/nbaproj.svg" alt="NBA project" />
         </a>
       
