--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </a>
       
         <a class="tile shift" href="./giftwise.html" aria-label="GiftWise project">
-          <img class="tile__img" src="./assets/svg/giftwise.svg" alt="GiftWise" />
+          <img class="tile__img__gw" src="./assets/svg/giftwise.svg" alt="GiftWise" />
         </a>
       
         <a class="tile iowawarm" href="./iowa-city-warm-project.html" aria-label="Iowa City Warm Project">
