--- a/nexus.html
+++ b/nexus.html
@@ -8,13 +8,13 @@
 <body>
   <header>
     <h1>Nexus Calendar</h1>
-    <p>Unified, collaborative calendar system with ICS imports + Google Calendar sync</p>
+    <p>Unified, collaborative calendar system with ICS imports and Google Calendar sync</p>
     <a class="backlink" href="./index.html">← back</a>
      <figure>
         <img
           src="./assets/img/nexus-logo.png"
           alt="Nexus Calendar logo"
-          style="max-width: 50%; height: auto;"
+          style="max-width: 30%; height: auto;"
         />
       </figure>
 
@@ -30,7 +30,7 @@
         of a physical calendar while supporting shared scheduling and imports from multiple providers.
       </p>
       <p>
-        We built this as a <strong>web-based system</strong> for cross-platform access and rapid deployment,
+        We built this as a web-based system for cross-platform access and rapid deployment,
         with a foundation that can support deeper integrations in the future.
       </p>
     </section>
@@ -44,7 +44,7 @@
           style="max-width: 40%; height: auto;"
         />
         <figcaption>
-          System flow: user input (web + groups) → database → touchscreen calendar rendering and updates.
+          System flow: user input → database → touchscreen calendar rendering and updates.
         </figcaption>
       </figure>
 
@@ -128,13 +128,10 @@
         </li>
         <li>
           <strong>Platform decision:</strong> we shifted from an app concept to a <strong>website</strong> for cross-platform access
-          and easier deployment within time/budget.
+          and easier deployment within time/budget. 
         </li>
         <li>
           <strong>Offline requirement:</strong> became unattainable after choosing a website (web use requires internet).
-        </li>
-        <li>
-          <strong>Notes/highlights:</strong> missed due to project management oversight during integration work.
         </li>
       </ul>
     </section>
@@ -149,16 +146,6 @@
       </ul>
     </section>
 
-    <section>
-      <h2>Next Steps</h2>
-      <ul>
-        <li>Add real-time synchronization for Outlook and iCloud (replace ICS workflow)</li>
-        <li>Enable true two-way touch screen interaction (not just display)</li>
-        <li>Implement persistent notes/highlights with optional group-sharing controls</li>
-        <li>Expand mobile support and polish cross-device UX</li>
-      </ul>
-      <p><em>Source: maintenance and future improvements section.</em></p>
-    </section>
 
     <section>
       <h2>Links</h2>
