--- a/nba.html
+++ b/nba.html
@@ -152,6 +152,10 @@
           <img src="./assets/img/combo.png" alt="Comeback rate by strength, age, and rest when trailing at halftime" />
           <figcaption>Combined view: comeback rate conditional on trailing at halftime, split by strength/age/rest.</figcaption>
         </figure>
+        <figure class="fig">
+          <img src="./assets/img/combograph.png" alt="Comeback rate by strength, age, and rest when trailing at halftime visualized" />
+          <figcaption>Combined view: comeback rate conditional on trailing at halftime, split by strength/age/rest visualized.</figcaption>
+        </figure>
       </section>
 
       <section class="proj-section">
