--- a/nba.html
+++ b/nba.html
@@ -154,7 +154,7 @@
         </figure>
         <figure class="fig">
           <img src="./assets/img/combograph.png" alt="Comeback rate by strength, age, and rest when trailing at halftime visualized" />
-          <figcaption>Combined view: comeback rate conditional on trailing at halftime, split by strength/age/rest visualized.</figcaption>
+          <figcaption>Comeback rate conditional on trailing at halftime, split by strength and age on 2-3 days rest visualized.</figcaption>
         </figure>
       </section>
 
