--- a/nba.html
+++ b/nba.html
@@ -22,7 +22,7 @@
         <div class="proj-copy">
           <p class="proj-lede">
             Imagine you’re at a game. Your team is down six at halftime.
-            Are you quietly confident your team will bounce back—or is it a sneak preview
+            Are you quietly confident your team will bounce back or is it a sneak preview
             of how the game will end?
           </p>
 
