--- a/nba.html
+++ b/nba.html
@@ -134,7 +134,7 @@
 
         <figure class="fig">
           <img src="./assets/img/rest.png" alt="Comeback rate by rest days when trailing at halftime" />
-          <figcaption>Comeback rate (home team trails at half),not yet bucketed.</figcaption>
+          <figcaption>Comeback rate (home team trails at half),not yet condensed</figcaption>
         </figure>
       </section>
 
