--- a/cat-tracker.html
+++ b/cat-tracker.html
@@ -112,7 +112,7 @@
           alt="Indoor Cat Tracker Home Page"
           style="max-width: 60%; height: auto;"
         />
-        <figcaption>System architecture: BLE devices → Raspberry Pi bridge → cloud backend → web interface.</figcaption>
+        <figcaption>Web interface - Home page.</figcaption>
       </figure>
       <p>
         Indoor Cat Tracker demonstrated a full end-to-end IoT pipeline:
