--- a/cat-tracker.html
+++ b/cat-tracker.html
@@ -125,6 +125,12 @@
   </main>
 
   <footer>
+    <p class="repo">
+        <a href="https://github.com/mechabubba/iot_project" target="_blank" rel="noreferrer">
+          https://github.com/mechabubba/iot_project
+        </a>
+      </p>
+    
     <hr />
     <p>© 2026 Nicholas Wilcox</p>
   </footer>
